# tr8tr-rs

./: .dockerignore  .gitignore  Cargo.toml
docker/: Dockerfile.dev  Dockerfile.prod  build_dev.sh  build_prod.sh  dev.sh
scripts/: run.sh
src/: environment.rs  main.rs
src/modules/: asset.rs  chart.rs  data_transformer.rs  mod.rs  notifier.rs  trigger.rs
src/modules/notifiers/: mod.rs  ntfy_notifier.rs  print_notifier.rs
src/modules/transformers/: atr.rs  candle_patterns.rs  mod.rs  moving_averages.rs  pivot_points.rs  rsi.rs
src/modules/transformers/sets/: mod.rs  tfs_001.rs
src/modules/triggers/: mod.rs  sr_bounce.rs  test.rs
