[package]
name = "tr8tr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

polars = {version = "0.33.0", features = ["rolling_window", "lazy", "diff", "temporal", "cum_agg", "abs", "dtype-struct", "dtype-datetime"] }
chrono = "0.4.31"
chrono-tz = "0.8.3"
plotters = "0.3.5"
clap = {version = "4.4.6", features = ["derive"]}